
*********************************************************************************************
*                                  CHANGE LOG 1.0.1 - > 1.1.0                               *
*********************************************************************************************
 * (02/13/2012) kivan
	# 261
	INTERNAL: DataSyncer: refactorized - every logic action has its method now, better performance due to better using DAO, javadoced.
	ADDED: forgotten classes which should be committed in previous commits, my apologies.

 * (02/13/2012) kivan
	# 260
	
	CHANGED: Experiment mapping - M:N set inverse changed to false (in order to be able set HW reference by setting a set to experiment).
	CHANGED: DataSyncer - only experiments now set Experiment/Hardware references.
	ADDED: ImportWizardLogic - added import of a new experiment into local db.
	FIXED: Nullpointer exceptions in ExperimentOverview, ImportWizard and Experiment, when date was null.
 
 * (02/12/2012) kivan
	# 259
	
	CHANGED: jerpa_db_derby.sql - removed unique constraints on hardware
	CHANGED: EDEDClient (and its jar) - updated wsdl file, added support for hardwareinfo, added list into experimentinfo for m:n relation description with hardware
	CHANGED: JerpaLang (and its jar) - added few new translations in ededb section
	CHANGED: ExperimentOverView - added hardware information panel
	CHANGED: Syncer - added download sync for hardware
	CHANGED: ImportWizard - added harware information panel; added row model for importfiles table, minor changes in importfilestable model
	CHANGED: Hibernate mapping - removed unnecessary mapings of HardwareUsageRel (M:N between experiments and hardware). M:N sets modified in Hardware and Experiment mappings.
	CHANGED: Hardware pojo - added custom toString method for ImportWizard ComboBox.
 
 * (02/08/2012) kivan
	# 258
	
	CHANGED: added missing localization into ExperimentOverview and BlobViewer (thus JerpaLang was updated too)
 
 * (02/07/2012) kivan
	# 257
	