@@ -59,3 +59,7 @@ log4j.logger.org.apache.cxf=info
 # set threshold
 log4j.appender.A1.Threshold=DEBUG
 log4j.appender.A2.Threshold=INFO
+
+db.derby.sql= resources/derby.sql
+db.derby.driver= org.apache.derby.jdbc.EmbeddedDriver
+db.derby.url= jdbc:derby:storage\\derby
